Added broadcast reward action